[TMS320F] Add test reference sources

--- a/test/Makefile.gas
+++ b/test/Makefile.gas
@@ -141,6 +141,22 @@ gas-%_mc68hc12.s19: %_mc68hc12.gas
 	| tr -d '\015' > $(^:.gas=.s19)
 	m6811-elf-objdump -m m68hc12 -D $(^:.gas=.s19) > $(^:.gas=.dis)
 
+# TMS320C30 target
+gas-%_tms320c30.hex: %_tms320c30.gas
+	tic4x-coff-as -mcpu=30 --warn -o $(^:.gas=.p) -al=$(^:.gas=.lst) $^
+	tic4x-coff-ld --entry=0 -section-start=.text=0x300 -o $(^:.gas=.o) $(^:.gas=.p)
+	tic4x-coff-objcopy -I coff1-tic4x -O ihex $(^:.gas=.o) /dev/stdout \
+	| tr -d '\015' > $(^:.gas=.hex)
+	tic4x-coff-objdump -m c30 -D $(^:.gas=.hex) > $(^:.gas=.dis)
+
+# TMS320C31 target
+gas-%_tms320c31.hex: %_tms320c31.gas
+	tic4x-coff-as -mcpu=31 --mrev=5 --warn -o $(^:.gas=.p) -al=$(^:.gas=.lst) $^
+	tic4x-coff-ld --entry=0 -section-start=.text=0x300 -o $(^:.gas=.o) $(^:.gas=.p)
+	tic4x-coff-objcopy -I coff1-tic4x -O ihex $(^:.gas=.o) /dev/stdout \
+	| tr -d '\015' > $(^:.gas=.hex)
+	tic4x-coff-objdump -m c31 -D $(^:.gas=.hex) > $(^:.gas=.dis)
+
 # Z80 target
 gas-%_z80.hex: %_z80.gas
 	z80-elf-as -march=z80 --warn -o $(^:.gas=.p) -al=$(^:.gas=.lst) $^
