[TMS320F] Add test reference sources for TMS320C32 variant

--- a/src/Makefile.arch
+++ b/src/Makefile.arch
@@ -78,7 +78,7 @@ TGT_pdp8     = im6100 hd6120
 TGT_scn2650  = scn2650
 TGT_tlcs90   = tlcs90
 TGT_tms320   = tms32010 tms320c25 tms320c26 tms320c20x tms320c5x
-TGT_tms320f  = tms320c30 tms320c31
+TGT_tms320f  = tms320c30 tms320c31 tms320c32
 TGT_tms370   = tms370
 TGT_tms7000  = tms7000
 TGT_tms9900  = tms9900 tms9980 tms9995 tms99105 tms99110
@@ -145,6 +145,7 @@ CPU_tms320c25 = 320C25
 CPU_tms320c26 = 320C26
 CPU_tms320c30 = 320C30
 CPU_tms320c31 = 320C31
+CPU_tms320c32 = 320C32
 CPU_tms320c5x = 320C5X
 CPU_tms370   = TMS370
 CPU_tms7000  = TMS7000
