[TMS320F] Add Arduino sample

--- a/.github/workflows/platformio-ci.yml
+++ b/.github/workflows/platformio-ci.yml
@@ -50,6 +50,7 @@ jobs:
           - scn2650
           - tlcs90
           - tms320
+          - tms320f
           - tms370
           - tms7000
           - tms9900
